--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0"
   },
