--- a/functions/package.json
+++ b/functions/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "dotenv": "^6.2.0",
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-admin": "^7.0.0",
+    "firebase-functions": "^2.2.0"
   },
   "private": true
 }
